--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: dunan00001@hotmail.com
 url: https://strideradu.github.io
 description: "Homapage of Nan Du, Computer Science Ph.D. in Michigan State University"
 skills: "Computer Scientist - Bioinformatist - Algorithm Engineer"
-meta_author: Nan Dy
+meta_author: Nan Du
 
 # Google webmaster tools
 google_verify:
