--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ address:
   - line: East Lansing, MI 48824
 
 # Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+credits: 'This page created by Freelancer, which is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
 
 # Build settings
 markdown: kramdown
